# expense-tracker-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/expense_tracker/: bot.py  config.py
src/expense_tracker/handlers/: callbacks.py  commands.py  keyboards.py  states.py
src/expense_tracker/models/: base.py  expense.py
src/expense_tracker/reports/: charts.py  csv_export.py  pdf_report.py
src/expense_tracker/services/: budget_service.py  category_service.py  expense_service.py  user_service.py
tests/: conftest.py  test_budget_service.py  test_category_service.py  test_csv_export.py  test_expense_service.py
